# clean-architecture-rust

./: .gitignore  Cargo.toml  README.md
.claude/: CLAUDE.md  settings.json
application/: Cargo.toml
application/src/: lib.rs
application/src/dto/command/jira/: create_jira_project_dto.rs  mod.rs  update_jira_project_dto.rs
application/src/dto/jira/: jira_issue_dto.rs  jira_project_dto.rs  mod.rs
application/src/dto/query/jira/: jira_issue_query_dto.rs  jira_project_query_dto.rs  mod.rs
application/src/error/: mod.rs  transaction_error.rs
application/src/error/command/jira/: jira_project_sync_error.rs  mod.rs
application/src/error/jira/: jira_issue_find_by_id_error.rs  jira_issue_list_error.rs  jira_issue_sync_error.rs  jira_project_create_error.rs  jira_project_find_by_id_error.rs  jira_project_list_error.rs  jira_project_update_error.rs  mod.rs
application/src/error/query/jira/: jira_issue_find_by_id_query_error.rs  jira_issue_list_query_error.rs  jira_project_find_by_id_query_error.rs  jira_project_list_query_error.rs  mod.rs
application/src/port/: mod.rs  transaction_executor.rs
application/src/repository/jira/: jira_issue_query_repository.rs  jira_project_query_repository.rs  mod.rs
application/src/usecase/command/jira/: jira_issue_sync_usecase.rs  jira_project_create_usecase.rs  jira_project_sync_usecase.rs  jira_project_update_usecase.rs  mod.rs
application/src/usecase/jira/: jira_issue_find_by_ids_usecase.rs  jira_issue_list_usecase.rs  jira_issue_sync_usecase.rs  mod.rs
application/src/usecase/query/jira/: jira_issue_find_by_ids_query_usecase.rs  jira_issue_list_query_usecase.rs  jira_project_find_by_ids_query_usecase.rs  jira_project_list_query_usecase.rs  mod.rs
infrastructure/: Cargo.toml
infrastructure/migrations/: 20240101000000_create_jira_tables.sql  20240101000001_seed_jira_projects.sql
infrastructure/src/: lib.rs
infrastructure/src/adapter/: mod.rs  transaction_executor_impl.rs
infrastructure/src/adapter/jira/: jira_api_config.rs  jira_api_dto.rs  jira_issue_adapter_impl.rs  jira_project_adapter_impl.rs  mod.rs
infrastructure/src/config/: database_config.rs  mod.rs
infrastructure/src/database/: jira_issue_row.rs  jira_project_row.rs  mod.rs
infrastructure/src/dto/jira/: jira_issue_dto.rs  jira_project_dto.rs  mod.rs
infrastructure/src/repository/command/jira/: jira_issue_repository_impl.rs  jira_project_repository_impl.rs  mod.rs
infrastructure/src/repository/jira/: jira_issue_repository_impl.rs  jira_project_repository_impl.rs  mod.rs
infrastructure/src/repository/query/: mod.rs
infrastructure/src/repository/query/jira/: jira_issue_query_repository_impl.rs  jira_project_query_repository_impl.rs  mod.rs
presentation/: Cargo.toml
presentation/src/api/graphql/: mod.rs  schema.rs
presentation/src/api/graphql/dataloader/: jira_issue_loader.rs  jira_project_loader.rs  mod.rs
presentation/src/api/graphql/mutation/: jira_project_mutation.rs  mod.rs
presentation/src/api/graphql/query/: jira_issue_query.rs  jira_project_query.rs  mod.rs
presentation/src/cli/: mod.rs  sync_issues.rs  sync_jira_issues.rs  sync_jira_projects.rs
(+47 files in other folders)
