[workspace]
resolver = "2"
members = [
    "domain",
    "application",
    "infrastructure",
    "presentation",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["wakita181009"]
license = "MIT"

[workspace.dependencies]
# Domain dependencies
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"

# Testing
tokio = { version = "1", features = ["full", "test-util"] }
