[package]
name = "application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
domain = { path = "../domain" }

# Async runtime
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true

# Error handling
thiserror.workspace = true

# Date/Time
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
