[package]
name = "presentation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }

# Async runtime
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true

# Error handling
thiserror.workspace = true

# Date/Time
chrono.workspace = true

# GraphQL
async-graphql = { version = "7", features = ["chrono", "dataloader"] }
async-graphql-axum = "7"

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tracing/Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "sync-issues"
path = "src/bin/sync_issues.rs"
